--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mapbox-browserify-template",
-  "version": "0.0.0",
-  "description": "A template for creating browserify Mapbox apps",
+  "name": "MapTab",
+  "version": "0.0.1",
+  "description": "A new tab Chrome extension",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,8 +12,5 @@
     "browserify": "^7.0.0",
     "corslite": "0.0.6",
     "mapbox.js": "^2.1.5"
-  },
-  "devDependencies": {
-    "uglify-js": ">=1.1.0"
   }
 }
