--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,10 @@
   "background": {
     "scripts": ["assets/site.js"]
   },
+  "icons": {
+    "16": "16.png",
+    "48": "48.png",
+    "128": "128.png"
+  },
   "manifest_version": 2
 }
