--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "MapTab",
   "description": "A tab extension for viewing your current location, time and weather.",
-  "shortname": "MapTab",
-  "version": "0.1",
+  "short_name": "MapTab",
+  "version": "0.4",
   "incognito": "split",
   "chrome_url_overrides": {
     "newtab": "index.html"
