--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "watchify index.js -o assets/site.js & serve",
-    "build": "NODE_ENV=production browserify index.js -o | uglifyjs -c -m > assets/site.js"
+    "start": "watchify ./react/index.js -o assets/bundle.js & serve -p 3000"
+  },
+  "browserify": {
+    "transform": [
+      [
+        "reactify"
+      ]
+    ]
   },
   "author": "Bobby Sudekum",
   "license": "ISC",
@@ -15,11 +21,15 @@
     "form-serialize": "^0.6.0",
     "gazetteer": "^0.1.4",
     "jquery-browserify": "^1.8.1",
+    "mapbox-base-css": "https://mapbox-npm.s3.amazonaws.com/package/mapbox-base-css-0.0.1-0da0e3fdcc65a37b6c3a9d1746a0f2f91cfd021a.tgz",
     "mapbox.js": "^2.1.5",
-    "mapbox-base-css": "https://mapbox-npm.s3.amazonaws.com/package/mapbox-base-css-0.0.1-0da0e3fdcc65a37b6c3a9d1746a0f2f91cfd021a.tgz"
+    "react": "^0.13.1",
+    "react-form-data": "^0.2.2"
   },
   "devDependencies": {
     "browserify": "^7.0.3",
+    "budo": "^1.3.1",
+    "reactify": "^1.1.0",
     "serve": "^1.4.0",
     "tape": "^3.0.3",
     "uglify-js": "^2.4.16",
