--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "MapTab",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A new tab Chrome extension",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "watchify ./lib/index.js -o assets/bundle.js",
-    "build": "NODE_ENV=production browserify ./lib/index.js | uglifyjs -c -m > assets/bundle.js"
+    "start": "watchify ./index.js -o assets/bundle.js",
+    "build": "NODE_ENV=production browserify ./index.js | uglifyjs -c -m > assets/bundle.js"
   },
   "browserify": {
     "transform": [
       [
-        "reactify"
+        "babelify"
       ]
     ]
   },
@@ -23,6 +23,7 @@
     "react": "^0.13.1"
   },
   "devDependencies": {
+    "babelify": "^6.0.2",
     "browserify": "^7.0.3",
     "reactify": "^1.1.0",
     "uglify-js": "^2.4.16",
